Fixed align text in single field report

--- a/resources/assets/styles/components/field-report/_singlelightbox.scss
+++ b/resources/assets/styles/components/field-report/_singlelightbox.scss
@@ -145,7 +145,7 @@ body.single-field-report {
 
     p.author-bio {
       display: inline;
-      width: 81%;
+      width: 75%;
       text-align: justify;
     }
   }
